# metalookup

./: .coveragerc  .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  README.md  build.sh  docker-compose-hooks.yml  docker-compose-nightly_rerun.yml  docker-compose-profiler.yml  docker-compose.yml  dockerfile  dockerfile.dockerignore  dockerfile_api  dockerfile_lighthouse  dockerfile_lighthouse.dockerignore  dockerfile_nightly_rerun  dockerfile_nightly_rerun.dockerignore  dockerfile_profiler  dockerfile_profiler.dockerignore  meta-lookup-compose-dev.yml  meta-lookup-compose-prod.yml  metadata-picker.yml  mkdocs.yml  push_to_repo.sh  pyproject.toml  readme.md  requirements.txt  restart_from_hook.sh  run.sh  setup.cfg  start_nightly_rerun.sh  start_profiler.sh  stop.sh  wily.cfg
.github/workflows/: build-images.yml  build.yml  build_and_push.yml  build_extractor.yml  build_lighthouse.yml  build_nightly_rerun.yml  codeql-analysis.yml  codeql.yml  docker-image.yml  docker-image_extractor.yml  docker-image_lighthouse.yml  main.yml  push.yml  push_extractor.yml  push_lighthouse.yml  push_nightly_rerun.yml  test.yml
developer_tools/: evaluator.py  rester.py
docs/: acceptance.md  cache.md  config.md  features.md  index.md  profiler.md  setup.md
postman_collections/: MetaLookup_UAT.postman_collection.json  developer.postman_collection.json
src/: config_manager.py  conftest.py  main.py  manager.py  metadata.py  settings.py
src/app/: api.py  communication.py  db_models.py  models.py  schemas.py  splash_models.py
src/cache/: cache_manager.py
src/caching/: backends.py  cache.py
src/config/: config.json  config_manager.py  example.json
src/core/: extractor.py  metadata_base.py  metadata_manager.py  website_manager.py
src/db/: base.py  db.py  models.py
src/features/: ExtractLinks.py  MetadataBase.py  accessibility.py  addblock_based.py  config_manager.py  cookies.py  direct_match.py  extract_from_document.py  extract_from_files.py  extract_links.py  gdpr.py  html_based.py  iframe.py  javascript.py  licence.py  malicious_extensions.py  metadata_base.py  metadata_manager.py  metatag_explorer.py  security.py  website_manager.py
src/lib/: config.py  constants.py  logger.py  math.py  settings.py  timing.py  tools.py
src/lighthouse/: api.py
src/metalookup/: cache.sqlite  main.py
src/metalookup/app/: api.py  models.py  splash_models.py
src/metalookup/caching/: cache.py  warmup.py
src/metalookup/core/: content.py  extractor.py  metadata_manager.py  website_manager.py
src/metalookup/features/: accessibility.py  adblock_based.py  addblock_based.py  cookies.py  direct_match.py  extract_from_files.py  gdpr.py  iframe.py  javascript.py  licence.py  malicious_extensions.py  security.py
src/metalookup/lib/: constants.py  logger.py  settings.py
src/testsuite/: suite.py
src/tools/: nightly_rerun.py
src/tools/dev/: evaluator.py  profiler.py  profiling.py  rester.py  wily.sh
tests/: .env  conftest.py  splash-response-google.json  test_libs.py
tests/e2e/: e2e_test.py
tests/extractors/: accessibility_test.py  adblock_based_test.py  conftest.py  cookie_test.py  direct_match_test.py  extract_from_files_test.py  gdpr_test.py  iframe_test.py  javascript_test.py  licence_test.py  malicious_extension_test.py  security_test.py
tests/integration/: api_integration_test.py  features_integration_test.py  lighthouse_api_test.py  malicious_extension_test.py  metalookup_api_test.py  security_test.py
tests/load_test/: locustfile.py  urls.txt
tests/resources/: .gitignore  arbeitsblatt_analog_losung.docx
tests/resources/har/: readme.md
tests/resources/splash/: google.de.json  readme.md  wlo-404.json  wlo-svg-logo.json
tests/unit/: accessibility_test.py  cache_manager_test.py  content_test.py  database_cache_backend_test.py  extractor_test.py  manager_test.py  metadata_manager_test.py  metadatabase_test.py  splash_model_test.py
tests/unit/db/: db_test.py
