[tool.poetry]
name = "oeh-search-meta"
version = "0.1.0"
description = ""
authors = ["Robert Meissner <robert.meissner@codecentric.de>"]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.scripts]
meta-lookup = 'manager:main'

[tool.poetry.dependencies]
python = "^3.9.1"
fastapi = "^0.65.0"
uvicorn = "^0.13.3"
requests = "^2.24.0"
adblockparser = "^0.7"
lxml = "^4.7.1"
tldextract = "^3.0.2"
"pdfminer.six" = "^20201018"
PyPDF2 = "^1.27.12"
aiohttp = "^3.8"
psycopg2 = "^2.9"
SQLAlchemy = "^1.4.21"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pandas = "^1.2.1"
altair = "^4.1.0"
altair-viewer = "^0.3.0"
mkdocs = "^1.1.2"
pip-licenses = "^3.3.0"
wily = "^1.19.0"
vulture = "^2.3"
pyinstrument = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 79

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = "false"
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests",
]
